--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ sqlparse==0.3.0
 django-admin-tools==0.8.1
 django-fluent-dashboard==1.0.1
 django-money==0.15
+django-choices==1.7.0
 django-favicon==0.1.3
