Specify readme is md

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ summary = App for cataloguing vintage cameras, lenses, films, negatives & prints
 license = MIT
 # Which file contains the long description?
 description-file = README.md
+description-content-type = text/markdown
 # Where can I access the project?
 home-page = https://github.com/djjudas21/photodb-django
 # Which version of Python does it need to run?
