--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ django-money==0.15
 django-choices==1.7.0
 django-favicon==0.1.3
 django-createsuperuserwithpassword==2.0.0
+psycopg2==2.8.3
+PyMySQL==0.9.3
