--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ license = MIT
 description-file = README.md
 description-content-type = text/markdown
 # Where can I access the project?
-home-page = https://github.com/djjudas21/photodb-django
+home-page = https://github.com/djjudas21/photodb
 # Which version of Python does it need to run?
 python_requires = >=3.6
 # How do you classify your app? https://pypi.python.org/pypi?%3Aaction=list_classifiers
