--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Django==2.2.4
-pytz==2019.2
-sqlparse==0.3.0
-django-admin-tools==0.8.1
-django-fluent-dashboard==1.0.1
-django-money==0.15
-django-choices==1.7.0
-django-favicon==0.1.3
-django-createsuperuserwithpassword==2.0.0
-psycopg2==2.8.3
-PyMySQL==0.9.3
+Django>=2.1.0,<3.0.0
+pytz>=2019.0,<2020.0
+sqlparse>=0.3.0,<1.0.0
+django-admin-tools>=0.8.0,<1.0.0
+django-fluent-dashboard>=1.0.0,<2.0.0
+django-money>=0.15,<1.0
+django-choices>=1.7.0,<2.0.0
+django-favicon>=0.1.3,<1.0.0
+django-createsuperuserwithpassword>=2.0.0,<3.0.0
+psycopg2>=2.8.0,<3.0.0
+PyMySQL>=0.9.0,<1.0.0
