--- a/kubernetes/deployment.apps_photodb.yaml
+++ b/kubernetes/deployment.apps_photodb.yaml
@@ -1,16 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "2"
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":null,"generation":1,"labels":{"app":"photodb"},"name":"photodb","namespace":"photodb","selfLink":"/apis/apps/v1/namespaces/photodb/deployments/photodb"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"photodb"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"photodb"}},"spec":{"containers":[{"image":"djjudas21/photodb:0.1.0","imagePullPolicy":"IfNotPresent","name":"photodb","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File","volumeMounts":[{"mountPath":"/mnt","name":"hostpath-volume"}]}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30,"volumes":[{"name":"hostpath-volume","persistentVolumeClaim":{"claimName":"photodb"}}]}}},"status":{}}
-  creationTimestamp: null
-  generation: 1
   labels:
     app: photodb
   name: photodb
-  selfLink: /apis/apps/v1/namespaces/photodb/deployments/photodb
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -30,7 +23,7 @@ spec:
         app: photodb
     spec:
       containers:
-      - image: djjudas21/photodb:0.1.0
+      - image: djjudas21/photodb
         imagePullPolicy: IfNotPresent
         name: photodb
         resources: {}
@@ -48,4 +41,3 @@ spec:
       - name: sqlite-volume
         persistentVolumeClaim:
           claimName: photodb-sqlite
-status: {}
