--- a/kubernetes/postgres.yaml
+++ b/kubernetes/postgres.yaml
@@ -18,7 +18,7 @@ data:
   user: cGhvdG9kYg==
   password: cGhvdG9kYg==
 ---
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deployment
