--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ django-favicon>=0.1.3,<1.0.0
 django-createsuperuserwithpassword>=2.0.0,<3.0.0
 psycopg2>=2.8.0,<3.0.0
 PyMySQL>=0.9.0,<1.0.0
-django-currentuser>=0.4.0.<0.5.0
+django-currentuser>=0.4.0,<0.5.0
