--- a/kubernetes/photodb.yaml
+++ b/kubernetes/photodb.yaml
@@ -30,7 +30,7 @@ spec:
         app: photodb
     spec:
       containers:
-      - image: djjudas21/photodb:0.1.1
+      - image: djjudas21/photodb:0.1.4
         imagePullPolicy: IfNotPresent
         name: photodb
         resources: {}
@@ -63,6 +63,8 @@ spec:
           value: '5432'
         - name: DB_ENGINE
           value: django.db.backends.postgresql
+        - name: DJANGO_PROD
+          value: 'true'
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -102,3 +104,44 @@ spec:
   #- hosts:
    # - myingress.com
     #secretName: photodb-ingress-cert # < cert-manager will store the created certificate in this secret.
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: django-migrations
+spec:
+  template:
+    spec:
+      containers:
+        - name: django
+          image: djjudas21/photodb:0.1.4
+          command: ['python', 'manage.py', 'migrate']
+          env:
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: postgres-credentials
+                key: user
+          - name: DB_PASS
+            valueFrom:
+              secretKeyRef:
+                name: postgres-credentials
+                key: password
+          - name: SECRET_KEY
+            valueFrom:
+              secretKeyRef:
+                name: secret-key
+                key: key
+          - name: DB_HOST
+            value: postgres-service
+          - name: DB_NAME
+            valueFrom:
+              configMapKeyRef:
+                name: photodb-config
+                key: db_name
+          - name: DB_PORT
+            value: '5432'
+          - name: DB_ENGINE
+            value: django.db.backends.postgresql
+      restartPolicy: Never
+  backoffLimit: 5
