--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ PyMySQL>=0.9.0,<1.0.0
 django-currentuser>=0.4.0,<0.5.0
 uWSGI>=2.0.0,<3.0.0
 django-getenv>=1.3.2,<2.0.0
+django-tables2>=2.1.1,<3.0.0
