--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,10 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-- kubernetes/ns.yaml
-- kubernetes/postgres.yaml
-- kubernetes/photodb.yaml
+bases:
+- ./photodb
+- ./postgres
 
 namespace: photodb
 
