Revert "Run migrations via env var"
This reverts commit 17abcd2407ba0ff30b6f2ca546c35dc69cc1e1cc.

--- a/kubernetes/kustomize/photodb/batch.yaml
+++ b/kubernetes/kustomize/photodb/batch.yaml
@@ -8,6 +8,7 @@ spec:
       containers:
         - name: django
           image: djjudas21/photodb:latest
+          command: ['python', 'manage.py', 'migrate']
           env:
           - name: DB_USER
             valueFrom:
@@ -35,7 +36,5 @@ spec:
             value: '5432'
           - name: DB_ENGINE
             value: django.db.backends.postgresql
-          - name: DJANGO_MANAGEPY_MIGRATE
-            value: on
       restartPolicy: Never
   backoffLimit: 5
