Change human-readable references

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ universal=0
 
 [metadata]
 # App name
-name = PhotoDB
+name = CameraHub
 # Who made it?
 author = Jonathan Gazeley
 # Do I really need to explain the following?
