--- a/kubernetes/kustomize/postgres/deployment.yaml
+++ b/kubernetes/kustomize/postgres/deployment.yaml
@@ -32,7 +32,7 @@ spec:
             - name: POSTGRES_DB
               valueFrom:
                 configMapKeyRef:
-                  name: photodb-config
+                  name: camerahub-config
                   key: db_name
           ports:
             - containerPort: 5432
