--- a/kubernetes/kustomize/camerahub/configmap.yaml
+++ b/kubernetes/kustomize/camerahub/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: photodb-config
+  name: camerahub-config
 data:
-  db_name: photodb
+  db_name: camerahub
