--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: photodb
+  name: camerahub
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: photodb-container
+      app: camerahub-container
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -17,12 +17,12 @@ spec:
   template:
     metadata:
       labels:
-        app: photodb-container
+        app: camerahub-container
     spec:
       containers:
-      - image: djjudas21/photodb:latest
+      - image: djjudas21/camerahub:latest
         imagePullPolicy: IfNotPresent
-        name: photodb
+        name: camerahub
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
@@ -47,7 +47,7 @@ spec:
         - name: DB_NAME
           valueFrom:
             configMapKeyRef:
-              name: photodb-config
+              name: camerahub-config
               key: db_name
         - name: DB_PORT
           value: '5432'
