--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ uWSGI>=2.0.0,<3.0.0
 django-getenv>=1.3.2,<2.0.0
 django-tables2>=2.1.1,<3.0.0
 django-crispy-forms>1.8.0,<2.0.0
+django-autosequence>=0.6.0,<1.0.0
