--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -1,3 +1,4 @@
+# Secret for Django
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,3 +6,12 @@ metadata:
 type: Opaque
 data:
   key: cGhvdG9kYg==
+---
+# Credentials for Postgres database
+apiVersion: v1
+kind: Secret
+metadata:
+  name: postgres-credentials
+data:
+  user: cGhvdG9kYg==
+  password: cGhvdG9kYg==
