--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - image: djjudas21/camerahub:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: camerahub
         resources: {}
         terminationMessagePath: /dev/termination-log
