Allow per-env secrets via env file

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -7,3 +7,8 @@ bases:
 
 patchesStrategicMerge:
 - dev.yaml
+
+secretGenerator:
+    - name: camerahub-secret
+      env: dev.env
+      behavior: replace
