--- a/kubernetes/overlays/prod/kustomization.yaml
+++ b/kubernetes/overlays/prod/kustomization.yaml
@@ -7,3 +7,8 @@ bases:
 
 patchesStrategicMerge:
 - prod.yaml
+
+secretGenerator:
+    - name: camerahub-secret
+      env: prod.env
+      behavior: replace
