Move all secrets into camerahub-secret so they can be set with one .env file

--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -1,8 +1,10 @@
-# Secret for Django
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret-key
+  name: camerahub-secret
 type: Opaque
 data:
-  key: cGhvdG9kYg==
+  django-key: cGhvdG9kYg==
+  sendgrid-key: ''
+  postgres-user: cGhvdG9kYg==
+  postgres-password: cGhvdG9kYg==
