--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -30,18 +30,23 @@ spec:
         - name: CAMERAHUB_DB_USER
           valueFrom:
             secretKeyRef:
-              name: postgres-credentials
-              key: user
+              name: camerahub-secret
+              key: postgres-user
         - name: CAMERAHUB_DB_PASS
           valueFrom:
             secretKeyRef:
-              name: postgres-credentials
-              key: password
+              name: camerahub-secret
+              key: postgres-password
         - name: CAMERAHUB_SECRET_KEY
           valueFrom:
             secretKeyRef:
-              name: secret-key
-              key: key
+              name: camerahub-secret
+              key: django-key
+        - name: CAMERAHUB_SENDGRID_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: camerahub-secret
+              key: sendgrid-key
         - name: CAMERAHUB_DB_HOST
           value: postgres-service
         - name: CAMERAHUB_DB_NAME
