--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -31,22 +31,22 @@ spec:
           valueFrom:
             secretKeyRef:
               name: camerahub-secret
-              key: postgres-user
+              key: CAMERAHUB_DB_USER
         - name: CAMERAHUB_DB_PASS
           valueFrom:
             secretKeyRef:
               name: camerahub-secret
-              key: postgres-password
+              key: CAMERAHUB_DB_PASS
         - name: CAMERAHUB_SECRET_KEY
           valueFrom:
             secretKeyRef:
               name: camerahub-secret
-              key: django-key
+              key: CAMERAHUB_SECRET_KEY
         - name: CAMERAHUB_SENDGRID_API_KEY
           valueFrom:
             secretKeyRef:
               name: camerahub-secret
-              key: sendgrid-key
+              key: CAMERAHUB_SENDGRID_API_KEY-key
         - name: CAMERAHUB_DB_HOST
           value: postgres-service
         - name: CAMERAHUB_DB_NAME
