--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: camerahub-secret
 type: Opaque
 data:
-  django-key: cGhvdG9kYg==
-  sendgrid-key: ''
-  postgres-user: cGhvdG9kYg==
-  postgres-password: cGhvdG9kYg==
+  CAMERAHUB_SECRET_KEY: cGhvdG9kYg==
+  CAMERAHUB_SENDGRID_API_KEY: ''
+  CAMERAHUB_DB_USER: cGhvdG9kYg==
+  CAMERAHUB_DB_PASS: cGhvdG9kYg==
