Model CAMERAHUB_DB_NAME as a secret, so it goes in the same env

--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -8,3 +8,4 @@ data:
   CAMERAHUB_SENDGRID_API_KEY: ''
   CAMERAHUB_DB_USER: cGhvdG9kYg==
   CAMERAHUB_DB_PASS: cGhvdG9kYg==
+  CAMERAHUB_DB_NAME: Y2FtZXJhaHViCg==
