--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -51,9 +51,9 @@ spec:
           value: postgres-service
         - name: CAMERAHUB_DB_NAME
           valueFrom:
-            configMapKeyRef:
-              name: camerahub-config
-              key: db_name
+            secretKeyRef:
+              name: camerahub-secret
+              key: CAMERAHUB_DB_NAME
         - name: CAMERAHUB_DB_PORT
           value: '5432'
         - name: CAMERAHUB_DB_ENGINE
