Hardcode a few env vars for k8s, set defaults for everything else so the container can always start

--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -4,8 +4,11 @@ metadata:
   name: camerahub-secret
 type: Opaque
 data:
-  CAMERAHUB_SECRET_KEY: cGhvdG9kYg==
+  # Sensible defaults to get you started
+  CAMERAHUB_SECRET_KEY: T3ZlcnJpZGVNZSE=          # OverrideMe!
   CAMERAHUB_SENDGRID_API_KEY: ''
-  CAMERAHUB_DB_USER: cGhvdG9kYg==
-  CAMERAHUB_DB_PASS: cGhvdG9kYg==
-  CAMERAHUB_DB_NAME: Y2FtZXJhaHViCg==
+  CAMERAHUB_DB_USER: Y2FtZXJhaHVi                 # camerahub
+  CAMERAHUB_DB_PASS: Y2FtZXJhaHVi                 # camerahub
+  CAMERAHUB_ADMIN_EMAIL: YWRtaW5AZXhhbXBsZS5jb20= # admin@example.com
+  CAMERAHUB_ADMIN_PASSWORD: YWRtaW4=              # admin
+  CAMERAHUB_PROD: dHJ1ZQ==                        # true
