--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -50,16 +50,16 @@ spec:
         - name: CAMERAHUB_DB_HOST
           value: postgres-service
         - name: CAMERAHUB_DB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: camerahub-secret
-              key: CAMERAHUB_DB_NAME
+          value: camerahub
         - name: CAMERAHUB_DB_PORT
           value: '5432'
         - name: CAMERAHUB_DB_ENGINE
           value: django.db.backends.postgresql
         - name: CAMERAHUB_PROD
-          value: 'true'
+          valueFrom:
+            secretKeyRef:
+              name: camerahub-secret
+              key: CAMERAHUB_PROD
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
