--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -6,7 +6,7 @@ type: Opaque
 data:
   # Sensible defaults to get you started
   CAMERAHUB_SECRET_KEY: T3ZlcnJpZGVNZSE=          # OverrideMe!
-  CAMERAHUB_SENDGRID_API_KEY: ''
+  CAMERAHUB_SENDGRID_KEY: ''
   CAMERAHUB_DB_USER: Y2FtZXJhaHVi                 # camerahub
   CAMERAHUB_DB_PASS: Y2FtZXJhaHVi                 # camerahub
   CAMERAHUB_ADMIN_EMAIL: YWRtaW5AZXhhbXBsZS5jb20= # admin@example.com
