--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ sqlparse>=0.3.0,<1.0.0
 django-money>=0.15,<1.0
 django-choices>=1.7.0,<2.0.0
 django-favicon>=0.1.3,<1.0.0
-psycopg2>=2.8.0,<3.0.0
+psycopg2-binary>=2.8.0,<3.0.0
 PyMySQL>=0.9.0,<1.0.0
 django-currentuser>=0.4.0,<0.5.0
 uWSGI>=2.0.0,<3.0.0
