--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ django-tables2>=2.1.1,<3.0.0
 django-crispy-forms>1.8.0,<2.0.0
 django-autosequence>=0.6.0,<1.0.0
 django-sendgrid-v5>=0.7.0,<1.0.0
+pbr>=5.0.0,<6.0.0
