--- a/kubernetes/kustomize/camerahub/deployment.yaml
+++ b/kubernetes/kustomize/camerahub/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         app: camerahub-container
     spec:
       containers:
-      - image: djjudas21/camerahub:latest
+      - image: djjudas21/camerahub:0.1.5
         imagePullPolicy: Always
         name: camerahub
         resources: {}
