--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ django-crispy-forms>1.8.0,<2.0.0
 django-autosequence>=0.6.0,<1.0.0
 django-sendgrid-v5>=0.7.0,<1.0.0
 pbr>=5.0.0,<6.0.0
+django-registration>=3.0.0,<4.0.0
