--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ django-autosequence>=0.6.0,<1.0.0
 django-sendgrid-v5>=0.7.0,<1.0.0
 pbr>=5.0.0,<6.0.0
 django-registration>=3.0.0,<4.0.0
+django-moderation>=0.7.0,<1.0.0
