--- a/kubernetes/kustomize/postgres/kustomization.yaml
+++ b/kubernetes/kustomize/postgres/kustomization.yaml
@@ -1,4 +1,21 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+configMapGenerator:
+- name: postgres
+  files:
+  - config/postgres.conf
+  - config/master.conf
+  - config/replica.conf
+  - config/pg_hba.conf
+  - config/create-replica-user.sh
+
+secretGenerator:
+- name: postgres
+  literals:
+  - replicaPassword=replica-password
+
 resources:
-- deployment.yaml
-- persistentvolumeclaim.yaml
-- service.yaml
+ - statefulset-master.yaml
+ - service.yaml
+ - statefulset-replica.yaml
