--- a/kubernetes/kustomize/camerahub/secret.yaml
+++ b/kubernetes/kustomize/camerahub/secret.yaml
@@ -7,8 +7,8 @@ data:
   # Sensible defaults to get you started
   CAMERAHUB_SECRET_KEY: T3ZlcnJpZGVNZSE=          # OverrideMe!
   CAMERAHUB_SENDGRID_KEY: ''
-  CAMERAHUB_DB_USER: Y2FtZXJhaHVi                 # camerahub
-  CAMERAHUB_DB_PASS: Y2FtZXJhaHVi                 # camerahub
+  CAMERAHUB_DB_USER: cG9zdGdyZXM=                 # postgres
+  CAMERAHUB_DB_PASS: cG9zdGdyZXM=                 # postgres
   CAMERAHUB_ADMIN_EMAIL: YWRtaW5AZXhhbXBsZS5jb20= # admin@example.com
   CAMERAHUB_ADMIN_PASSWORD: YWRtaW4=              # admin
   CAMERAHUB_PROD: dHJ1ZQ==                        # true
