--- a/kubernetes/overlays/dev/dev.yaml
+++ b/kubernetes/overlays/dev/dev.yaml
@@ -16,3 +16,10 @@ spec:
       containers:
       - image: djjudas21/camerahub:testing
         name: camerahub
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: postgres-replica
+spec:
+  replicas: 0
