--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ django-sendgrid-v5>=0.7.0,<1.0.0
 pbr>=5.0.0,<6.0.0
 django-registration>=3.0.0,<4.0.0
 django-moderation>=0.7.0,<1.0.0
+django-fullurl>=1.0,<2.0
