Suspend backups in dev

--- a/kubernetes/overlays/dev/dev.yaml
+++ b/kubernetes/overlays/dev/dev.yaml
@@ -23,3 +23,10 @@ metadata:
   name: postgres-replica
 spec:
   replicas: 0
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: postgres-backup
+spec:
+  suspend: true
