Clean up backup pods after 24h

--- a/kubernetes/kustomize/postgres/backup.yaml
+++ b/kubernetes/kustomize/postgres/backup.yaml
@@ -37,6 +37,7 @@ spec:
               persistentVolumeClaim:
                 claimName: postgres-backup
   schedule: "0 3 * * *"
+  ttlSecondsAfterFinished: 86400
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
