Build docker image in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
+---
 language: python
 python:
-- '3.6'
-- '3.7'
+  - '3.6'
+  - '3.7'
+services:
+  - docker
 install:
-- pip install .
+  - pip install .
+  - docker build -t djjudas21/camerahub .
 script:
-- python manage.py test
+  - python manage.py test
 deploy:
   provider: pypi
   user: jgazeley
