--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ pbr>=5.0.0,<6.0.0
 django-registration>=3.0.0,<4.0.0
 django-moderation>=0.7.0,<1.0.0
 django-fullurl>=1.0,<2.0
+django-filter>=2.2.0,<3.0.0
