--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django>=2.1.0,<3.0.0
+Django>=2.2.0,<3.0.0
 pytz>=2019.0,<2020.0
 sqlparse>=0.3.0,<1.0.0
 django-money>=0.15,<1.0
@@ -18,3 +18,4 @@ django-registration>=3.0.0,<4.0.0
 django-moderation>=0.7.0,<1.0.0
 django-fullurl>=1.0,<2.0
 django-filter>=2.2.0,<3.0.0
+awesome-slugify>=1.6.5,<2.0.0
