--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ django-moderation>=0.7.0,<1.0.0
 django-fullurl>=1.0,<2.0
 django-filter>=2.2.0,<3.0.0
 awesome-slugify>=1.6.5,<2.0.0
+django-watson>=1.5.5,<2.0.0
