--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,14 +6,12 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
         python-version: [3.6, 3.7, 3.8]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -28,3 +26,14 @@ jobs:
       run: |
         python manage.py test
         python manage.py migrate
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build Docker image
+      uses: docker/build-push-action@v1
+      with:
+        repository: djjudas21/camerahub
+        tags: v1
+        push: false
