--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,9 +28,16 @@ jobs:
         python manage.py migrate
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
     needs: test
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Build Python package
       run: |
         python setup.py sdist
