Add Kustomize manifest for Redis

--- a/kubernetes/kustomize/kustomization.yaml
+++ b/kubernetes/kustomize/kustomization.yaml
@@ -5,8 +5,7 @@ kind: Kustomization
 bases:
   - ./camerahub
   - ./postgres
-
-commonLabels:
+  - ./redis
 
 secretGenerator:
   - name: camerahub-secret
