--- a/kubernetes/overlays/dev/dev.yaml
+++ b/kubernetes/overlays/dev/dev.yaml
@@ -30,3 +30,10 @@ metadata:
   name: postgres-backup
 spec:
   suspend: true
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: redis-cluster
+spec:
+  replicas: 1
