--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,8 +6,16 @@ on:
     branches: [ master ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: GitHub Action for pylint
+        uses: cclauss/GitHub-Action-for-pylint@0.7.0
+        with:
+          args: "pip install -r requirements.txt ; pylint **/*.py"
   test:
     runs-on: ubuntu-latest
+    needs: lint
     strategy:
       max-parallel: 4
       matrix:
