Run django checks in the pipeline

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,6 +33,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
+        python manage.py check
         python manage.py test
         python manage.py migrate
   build:
