--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Run pylint
         uses: cclauss/GitHub-Action-for-pylint@0.7.0
         with:
-          args: "pip install -r requirements.txt; pylint --rcfile=.pylintrc **/*.py"
+          args: "cat requirements.txt | grep -v psycopg2 | xargs -n 1 pip install; pylint --rcfile=.pylintrc **/*.py"
   test:
     runs-on: ubuntu-latest
     needs: lint
