--- a/kubernetes/overlays/dev/dev.yaml
+++ b/kubernetes/overlays/dev/dev.yaml
@@ -1,9 +1,17 @@
-apiVersion: v1
-kind: Service
+apiVersion: extensions/v1beta1
+kind: Ingress
 metadata:
   name: camerahub
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  type: NodePort
+  rules:
+    - http:
+        paths:
+          - path: /
+            backend:
+              serviceName: camerahub
+              servicePort: 8000
 ---
 apiVersion: apps/v1
 kind: Deployment
