Update to latest release

--- a/kubernetes/overlays/dev/dev.yaml
+++ b/kubernetes/overlays/dev/dev.yaml
@@ -22,7 +22,7 @@ spec:
   template:
     spec:
       containers:
-        - image: djjudas21/camerahub:testing
+        - image: djjudas21/camerahub:0.6.2
           name: camerahub
 ---
 apiVersion: apps/v1
