--- a/kubernetes/kustomize/camerahub/ingress.yaml
+++ b/kubernetes/kustomize/camerahub/ingress.yaml
@@ -2,10 +2,11 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: camerahub
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
     - http:
-        # host: myingress.com
         paths:
           - backend:
               serviceName: camerahub
