Switch to caret notation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,28 +6,27 @@ authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Django = ">=2.2.0,<3.0.0"
-pytz = ">=2019.0,<2020.0"
-sqlparse = ">=0.3.0,<1.0.0"
-django-money = ">=0.15,<1.0"
-django-choices = ">=1.7.0,<2.0.0"
-django-favicon = ">=0.1.3,<1.0.0"
-psycopg2-binary = ">=2.8.0,<3.0.0"
-django-currentuser = ">=0.5.0,<1.0.0"
-uWSGI = ">=2.0.0,<3.0.0"
-django-getenv = ">=1.3.2,<2.0.0"
-django-tables2 = ">=2.1.1,<3.0.0"
-django-crispy-forms = ">=1.9.0,<2.0.0"
-django-autosequence = ">=0.6.0,<1.0.0"
-django-sendgrid-v5 = ">=0.7.0,<1.0.0"
-django-registration = ">=3.0.0,<4.0.0"
-django-moderation = ">=0.7.0,<1.0.0"
-django-fullurl = ">=1.0,<2.0"
-django-filter = ">=2.2.0,<3.0.0"
-awesome-slugify = ">=1.6.5,<2.0.0"
-django-watson = ">=1.5.5,<2.0.0"
-django-redis = ">=4.11.0,<5.0.0"
-pylint-django = ">=2.0.14,<3.0.0"
+Django = "^2.2"
+pytz = "*"
+django-money = "^0.15"
+django-choices = "^1.7.0"
+django-favicon = "^0.1.3"
+psycopg2-binary = "^2.8"
+django-currentuser = "^0.5"
+uWSGI = "^2.0.0"
+django-getenv = "^1.3.2"
+django-tables2 = "^2.1.1"
+django-crispy-forms = "^1.9.0"
+django-autosequence = "^0"
+django-sendgrid-v5 = "^0"
+django-registration = "^3.0"
+django-moderation = "^0.7"
+django-fullurl = "^1"
+django-filter = "^2.2"
+awesome-slugify = "^1.6.5"
+django-watson = "^1.5.5"
+django-redis = "^4.11"
+pylint-django = "^2.0.14"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
