--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "camerahub"
 version = "0.7.0"
 description = "App for cataloguing vintage cameras, lenses, films, negatives & prints"
 authors = ["Jonathan Gazeley <camerahub@jonathangazeley.com>"]
+license = "Apache-2.0"
+readme = "README.md"
+homepage = "https://camerahub.info/"
+repository = "https://github.com/djjudas21/camerahub"
 
 [tool.poetry.dependencies]
 python = "^3.7"
