--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,15 +29,28 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
+    - name: Install Poetry
+      uses: dschep/install-poetry-action@v1.2
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          poetry-${{ hashFiles('**/poetry.lock') }}
+    - name: Set Poetry config
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        poetry config settings.virtualenvs.in-project false
+        poetry config settings.virtualenvs.path ~/.virtualenvs
+    - name: Install Dependencies
+      run: poetry install
+      if: steps.cache.outputs.cache-hit != 'true'
     - name: Run Tests
       run: |
-        python manage.py check
-        python manage.py test
-        python manage.py migrate
+        poetry run python manage.py check
+        poetry run python manage.py test
+        poetry run python manage.py migrate
   build:
     runs-on: ubuntu-latest
     strategy:
