--- a/.pylintrc
+++ b/.pylintrc
@@ -144,8 +144,9 @@ disable=print-statement,
         missing-docstring,
         no-init,
         too-many-lines,
-        arguments-differ
-
+        arguments-differ,
+        signature-differs
+        
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
