--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ awesome-slugify>=1.6.5,<2.0.0
 django-watson>=1.5.5,<2.0.0
 django-redis>=4.11.0,<5.0.0
 pylint-django>=2.0.14,<3.0.0
+django-tagging
