--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Run pylint
         uses: cclauss/GitHub-Action-for-pylint@0.7.0
         with:
-          args: "cat requirements.txt | grep -v psycopg2 | xargs -n 1 pip install; pylint --rcfile=.pylintrc **/*.py"
+          args: "poetry install --no-root; pylint --rcfile=.pylintrc **/*.py"
   test:
     runs-on: ubuntu-latest
     needs: lint
@@ -61,8 +61,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build Python package
       run: |
-        pip install wheel
-        python setup.py sdist bdist_wheel
+        poetry install
+        poetry build
     - name: Upload Python artifacts
       uses: actions/upload-artifact@v1
       with:
