--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,14 +8,6 @@ on:
     types: [ published ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run pylint
-        uses: cclauss/GitHub-Action-for-pylint@0.7.0
-        with:
-          args: "poetry install --no-root; poetry run pylint --rcfile=.pylintrc **/*.py"
   test:
     runs-on: ubuntu-latest
     needs: lint
@@ -42,6 +34,10 @@ jobs:
     - name: Install Dependencies
       run: poetry install
       if: steps.cache.outputs.cache-hit != 'true'
+    - name: Run pylint
+      uses: cclauss/GitHub-Action-for-pylint@0.7.0
+      with:
+        args: "poetry run pylint --rcfile=.pylintrc **/*.py"
     - name: Run Tests
       run: |
         poetry run python manage.py check
