Don't run pylint in poetry

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Run pylint
       uses: cclauss/GitHub-Action-for-pylint@0.7.0
       with:
-        args: "poetry run pylint --rcfile=.pylintrc **/*.py"
+        args: "pylint --rcfile=.pylintrc **/*.py"
     - name: Run Tests
       run: |
         poetry run python manage.py check
