--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ awesome-slugify = "^1.6.5"
 django-watson = "^1.5.5"
 django-redis = "^4.11"
 django-taggit = "^1"
+poetry-version = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
