--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,6 +52,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      uses: dschep/install-poetry-action@v1.2
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          poetry-${{ hashFiles('**/poetry.lock') }}
     - name: Build Python package
       run: |
         poetry install
