--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,17 @@ packages = [
 include = [
     "static",
 ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Web Environment",
+    "Framework :: Django",
+    "Framework :: Django :: 2.2",
+    "Intended Audience :: End Users/Desktop",
+    "Natural Language :: English",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: Database",
+    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
+]
 
 [tool.poetry.dependencies]
 python = "^3.6"
