--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,3 +8,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v1
+        with:
+          config_file: .yamllint.yml
